$Id$

CHANGELOG for ACL for Drupal 7


acl 7.x-1.x-dev:
  Enhancements:
    - Add new acl_add_nodes() function to add access control to multiple nodes selected by a subquery.
    - #936682: Add a 'number' column and some indexes to the {acl} table.
    - #761696: Add tests (work in progress).
    - Create new hook_acl_explain() to allow the client to explain its grant records.
    - Add acl_has_user($acl_id, $uid) API function.
  Port to D7:
    - Need to pass $form_state by reference to _acl_edit_form_after_build().
    - #946636: Fix WSOD due to core reloading the form from the cache and not loading include files.
    - #836822: Don't anonymize 'deny' grant records.
    - #836822: Fix some porting errors.
    - Fix line endings (no functional change).
    - #798106: Convert another left-over db_result() call.
    - #824642: Avoid type conversion problems when FALSE is passed rather than 0.
    - #798106: Fix incomplete porting (db_query).
    - #761696: Simpletests: provide some dummy files.
    - #798108: Remove drupal_install_schema() and drupal_uninstall_schema() calls.
    - Port database statements.
    - Use 6.x-1.1 and fix the applicable Coder errors.


acl 6.x-1.1 (2010-01-24):
  Bugs fixed:
    - #680324: Add missing index if upgraded from D5.
  Enhancements:
    - Clean up some minor coder issues (no functional changes).

acl 6.x-1.0 (2009-06-03):
  Enhancements:
    - #243073: Update Swedish translation and add .pot file.

acl 6.x-1.x-RC1 (2009-04-29):
  Enhancements:
    - #369918: Add German translation.
  Bugs fixed:
    - #371446: Use priority for the 'deny' grant, too.

acl 6.x-1.x-BETA4 (2009-01-29):
  Enhancements:
    - Factor out form code into .inc file.
    - Enable grant priority.
    - Add new acl_get_uids() function.

acl 6.x-1.x-BETA3 (2009-01-03):
  Bugs fixed:
    - Fix upgrade path from D5 (change acl_id column to auto_increment).

acl 6.x-1.x-BETA2 (2008-10-14):
  Bugs fixed: