@@ -9,10 +9,10 @@
 /**
  * Explain what your ACL grant records mean.
  */
-function hook_acl_explain($acl_id, $name, $users = NULL) {
+function hook_acl_explain($acl_id, $name, $number, $users = NULL) {
   if (empty($users)) {
-    return "ACL (id=$acl_id) would grant access to $name.";
+    return "ACL (id=$acl_id) would grant access to $name/$number.";
   }
-  return "ACL (id=$acl_id) grants access to $name to the listed user(s).";
+  return "ACL (id=$acl_id) grants access to $name/$number to the listed user(s).";
 }
 
